# TankBattleSim

./: .gitignore  README.md  docker-compose.yml
analytics/: main.py  requirements.txt
analytics/api/: routes.py
analytics/db/: crud.py  database.py
analytics/models/: battle.py  tank.py
analytics/worker/: event_consumer.py  file_watcher.py
cpp_sim/: CMakeLists.txt
cpp_sim/src/: main.cpp
cpp_sim/src/components/: Health.h  Movement.h  ShootIntent.h  Target.h  Team.h  Transform.h  Weapon.h
cpp_sim/src/ecs/: ComponentPool.h  Entity.h  World.h
cpp_sim/src/systems/: AISystem.h  CombatSystem.h  ISystem.h  MovementSystem.h
cpp_sim/src/threading/: JobSystem.h  ThreadPool.h
cpp_sim/src/utils/: EventLogger.h  constants.h
cpp_sim/tests/: CMakeLists.txt  test_components.cpp  test_ecs.cpp  test_systems.cpp  test_threading.cpp
shared/: benchmark_results.txt
visualizer/: config.py  main.py
visualizer/data/: event_reader.py
visualizer/renderer/: battlefield.py  hud.py
